--- a/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
+++ b/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
@@ -34,8 +34,20 @@
 \section{Introduction} %=== Esrto genera una página de sección.
 
 \begin{frame}
-  \frametitle{Título Pág. 1}
-  Slide 1.
+  \frametitle{Beneficios}
+  \begin{itemize}
+    \item \textbf{Abstracción de alto nivel}. \emph{TBB} se encarga de
+          manejar los \emph{threads}, mientras que el usuario tan solo
+          tiene que definir la \textbf{lógica de paralelismo}.
+    \item \textbf{\emph{Threading} for performance}. \emph{TBB} está orientado
+          a paralelizar tareas de computación intensiva.
+    \item \textbf{Compatibilidad con otras librerías de paralelización}.
+    \item \textbf{Data-parallel Programming}. Permite a diferentes
+          \emph{threads} trabajar sobre partes del mismo conjunto de datos.
+    \item \textbf{Generic Programming}. Los algoritmos son implementados
+          sobre tipos genéricos, que el usuario especifica en función
+          de su necesidad.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
