--- a/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
+++ b/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
@@ -5,8 +5,8 @@
 \usepackage{booktabs}
 \usepackage[scale=2]{ccicons}
 
-\usepackage{pgfplots}
-\usepgfplotslibrary{dateplot}
+%\usepackage{pgfplots}
+%\usepgfplotslibrary{dateplot}
 
 \usepackage{listings}
 
@@ -32,6 +32,24 @@
 \end{frame}
 
 \section{Introduction} %=== Esrto genera una página de sección.
+
+\begin{frame}
+  \frametitle{Intel Threading Building Blocks.}
+  \emph{ \
+    Es una librería \texttt{C++} desarrollada por \emph{Intel}, cuyo objetivo
+    es facilitar la creación de programas paralelos.
+    La librería ofrece diferentes estructuras de datos y algoritmos que
+    ofrecen al programador una abstracción de alto nivel sobre la máquina.
+    \begin{itemize}
+      \item[] Fabricante: Intel.
+      \item[] Compatibilidad: FreeBSD, Linux, Solaris, OS X, Windows, Android.
+      \item[] Versión \texttt{1.0} el 29 de Augosto de 2006.
+      \item[] Versión actual: 4.4 / 25 de Augsto de, 2015.
+      \item[] Licencia: dual: commercial / open source (GPLv2 with the (libstdc++)
+              runtime exception), plus Freeware.
+    \end{itemize}    
+  }
+\end{frame}
 
 \begin{frame}
   \frametitle{Beneficios}
