New slide: contents implemented into Intel TBB

--- a/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
+++ b/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
@@ -24,6 +24,9 @@
 \maketitle
 
 
+
+
+
 %%======= INDICE ========================================
 \begin{frame}
   \frametitle{Índice}
@@ -67,6 +70,29 @@
           de su necesidad.
   \end{itemize}
 \end{frame}
+
+
+\begin{frame}
+  \frametitle{Contenidos}
+  Intel TBB proporciona:
+  \begin{itemize}
+  \item \textbf{Básicos:}\\\quad\texttt{parallel\_for}, \texttt{parallel\_reduce},
+    \texttt{parallel\_scan}.
+  \item \textbf{Avanzados:}\\\quad\texttt{parallel\_while}, \texttt{parallel\_do},
+    \texttt{parallel\_sort}.
+  \item \textbf{Contenedores:}\\\quad\texttt{concurrent\_queue},
+    \texttt{concurrent\_vector}, \texttt{concurrent\_hash\_map}.
+  \item \textbf{Exclusión mutua:}\\\quad\texttt{mutex},
+    \texttt{spin\_mutex}, \texttt{queuing\_mutex}.
+  \item \textbf{Operaciones atómicas:}\\\quad
+    \texttt{fetch\_and\_increment}, \texttt{fetch\_and\_decrement},
+    \texttt{fecth\_and\_add}, \texttt{compare\_and\_swap},
+    \texttt{compare\_and\_store}.
+  \end{itemize}
+
+\end{frame}
+
+
 
 \begin{frame}
   \frametitle{Título Pág 2.}
