--- a/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
+++ b/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
@@ -76,17 +76,17 @@
   \frametitle{Contenidos}
   Intel TBB proporciona:
   \begin{itemize}
-  \item \textbf{Básicos:}\\\quad\texttt{parallel\_for}, \texttt{parallel\_reduce},
+  \item \textbf{Básicos:}\\\quad\texttt{parallel\_for},\texttt{parallel\_reduce},
     \texttt{parallel\_scan}.
   \item \textbf{Avanzados:}\\\quad\texttt{parallel\_while}, \texttt{parallel\_do},
     \texttt{parallel\_sort}.
   \item \textbf{Contenedores:}\\\quad\texttt{concurrent\_queue},
     \texttt{concurrent\_vector}, \texttt{concurrent\_hash\_map}.
   \item \textbf{Exclusión mutua:}\\\quad\texttt{mutex},
-    \texttt{spin\_mutex}, \texttt{queuing\_mutex}.
+    \texttt{spin\_mutex},\texttt{queuing\_mutex}.
   \item \textbf{Operaciones atómicas:}\\\quad
     \texttt{fetch\_and\_increment}, \texttt{fetch\_and\_decrement},
-    \texttt{fecth\_and\_add}, \texttt{compare\_and\_swap},
+    \texttt{fecth\_and\_add},\texttt{compare\_and\_swap},
     \texttt{compare\_and\_store}.
   \end{itemize}
 
@@ -152,6 +152,18 @@ for( ; ; ){
   \item work\_counter.fetch\_and\_add
   \item work\_counter.compare\_and\_swap
   \end{itemize}
+\end{frame}
+
+%======= BIBLIOGRAFÍA =======
+\begin{frame}
+  \frametitle{Bibliografía}
+  
+  \begin{enumerate}
+  \item \textbf{Página oficial:}\\\url{https://www.threadingbuildingblocks.org/}
+  \item \textbf{Intel TBB tutorial:}\\\url{http://www.inf.ed.ac.uk/teaching/courses/ppls/TBBtutorial.pdf}
+  \item \textbf{Hpc wiki:}\\\url{https://wiki.hpcc.msu.edu/display/gpgpu/Intel+Threading+Building+Blocks+Talk+slides}
+  \item \textbf{Wikipedia:}\\\url{https://en.wikipedia.org/wiki/Threading_Building_Blocks}
+  \end{enumerate}
 \end{frame}
 
 \end{document}
