--- a/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
+++ b/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
@@ -11,14 +11,14 @@
 \usepackage{listings}
 
 
-\title{Intel Threading Building Blocks}
-%\subtitle{}
-\date{}%23 Noviembre 2015}
+\title{}
+\subtitle{Intel Threading Building Blocks}
+\date{}
 \author{Luis María Costero Valero\\Jesús Javier Domenech Arellano\\Hristo
   Ivanov Ivanov}
 \institute{23 Noviembre 2015}
 
-
+\titlegraphic{{\includegraphics[scale=0.4]{bird-illustration-tbb.png}}
 \begin{document}
 
 \maketitle
