Fixed logo position (bird)

--- a/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
+++ b/p7-IntelThredingBuildingBlocks_ITBB/PRESENTACION.tex
@@ -18,7 +18,7 @@
   Ivanov Ivanov}
 \institute{23 Noviembre 2015}
 
-\titlegraphic{\includegraphics[scale=0.4]{bird-illustration-tbb.png}}
+\titlegraphic{\hfill\includegraphics[scale=0.4]{bird-illustration-tbb.png}}
 \begin{document}
 
 \maketitle
