añadido el logo a la portada

--- a/p8-openMP/PRESENTACION.tex
+++ b/p8-openMP/PRESENTACION.tex
@@ -16,9 +16,9 @@
 \date{}
 \author{Luis María Costero Valero\\Jesús Javier Domenech Arellano\\Hristo
   Ivanov Ivanov}
-\institute{10 Enero 2016}
+\institute{11 Enero 2016}
 
-%\titlegraphic{\hfill\includegraphics[scale=0.4]{bird-illustration-tbb.png}}
+\titlegraphic{\hfill\includegraphics[scale=0.2]{images/logo.png}}
 \begin{document}
 
 \maketitle
