spell check y alguna cosilla

--- a/px-HPC-On-Cloud/PRESENTACION.tex
+++ b/px-HPC-On-Cloud/PRESENTACION.tex
@@ -43,12 +43,12 @@
     Es una plataforma de \emph{cloud computing} ofrecida por Google. Los
     principales productos que ofrece son:
     \begin{itemize}
-      \item[] Computación: Máquinas virtuales alojadas sobre la infraestructura
+      \item[] \textbf{Computación:} Máquinas virtuales alojadas sobre la infraestructura
               de Google.
-      \item[] Cloud Netwoking: Una de las redes de nivel Global más avanzada.
-      \item[] Almacenamineto: Varios servios de almacenamineto. SQL, NonSQL y
-              mucho más.
-      \item[] Servicio: Multitud de servicios de fácil integración.
+      \item[] \textbf{Cloud Netwoking:} Una de las redes de nivel Global más avanzada.
+      \item[] \textbf{Almacenamiento:} Varios servicios de almacenamineto: SQL, NoSQL y
+              muchos más.
+      \item[] \textbf{Servicio:} Multitud de servicios de fácil integración.
     \end{itemize}    
     En este trabajo hemos utilizado Google Cloud Plataform para resolver un
     problema de Computación.
