--- a/p8-openMP/PRESENTACION.tex
+++ b/p8-openMP/PRESENTACION.tex
@@ -12,16 +12,17 @@
 \usepackage[spanish]{babel}
 
 \usepackage{listings}
+\usepackage{pgfplots}
 
 
-\title{}
-\subtitle{Ejemplo: openMP}
+\title{Ejemplo de aplicación OpenMP}
+\subtitle{Factorización de Cholesky}
 \date{}
 \author{Luis María Costero Valero\\Jesús Javier Domenech Arellano\\Hristo
   Ivanov Ivanov}
-\institute{11 Enero 2016}
+\institute{--- CAP. Grupo E ---}
 
-\titlegraphic{\hfill\includegraphics[scale=0.2]{images/logo.png}}
+\titlegraphic{\hfill\includegraphics[scale=0.10]{images/logo.png}}
 
 
 \metroset{titleformat=regular}
@@ -41,7 +42,7 @@
 % Add your keywords here, and have this in a separate file
 % and include it in your preamble
 \lstset{emph={%  
-    procedure, end, to, do, for, pragma, omp, parallel%
+    procedure, end, to, do, pragma, omp, parallel, for, private%
     },emphstyle={\color{black}\bfseries\underline}%
 }%
 
@@ -102,32 +103,58 @@ $$ A = C * C^t $$
 
 \begin{frame}
   \frametitle{Pruebas realizadas}
+
+  \alert{Pruebas realizadas:}
+  \begin{itemize}
+  \item Ejecución de Cholesky \textbf{secuencial}.
+  \item Ejecución de Cholesky usando \textbf{pthreads} (16 threads).
+  \item Ejecución de Cholesky utilizando \textbf{OpenMP - gcc}.
+  \item Ejecución de Cholesky utilizando \textbf{OpenMP - Intel}.
+  \end{itemize}
+
+  \alert{Características de las pruebas:}
+  \begin{itemize}
+  \item Matriz 4096x4096 elementos.
+  \item 16 hilos de ejecución.
+  \end{itemize}
+  \alert{Características de la máquina:}
+  \begin{itemize}
+  \item Intel Xeon E5530 - 2.4 GHz
+  \item 48 GB RAM
+  \item Debian Jessie, Kernel 3.14-1-amd64
+  \item gcc v4.8.3
+  \item icc v14.0.3
+  \end{itemize}
+
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Cholesky usando OPenMP}
+  \frametitle{Cholesky usando OpenMP}
   
 \begin{lstlisting}
 void chol_using_openmp(const Matrix A, Matrix U){
    unsigned int i, j, k; 
    unsigned int size = A.num_rows * A.num_columns;
 
-   //#pragma omp parallel for 
+   #pragma omp parallel for 
    for (i = 0; i < size; i ++)
       U.elements[i] = A.elements[i];
+   
    for(k = 0; k < U.num_rows; k++){
       U.elements[k * U.num_rows + k] = sqrt(U.elements[k * U.num_rows + k]);
-      // Division step
+      //Division step
       #pragma omp parallel for
       for(j = (k + 1); j < U.num_rows; j++)
          U.elements[k * U.num_rows + j] /= U.elements[k * U.num_rows + k]; 
+      
       // Elimination step
       float * elems = U.elements;
       omp_set_num_threads(NUM_OMPTHREADS); // Set the number of threads		
       #pragma omp parallel for private(i,j)
       for(i = (k + 1); i < U.num_rows; i++){
          for(j = i; j < U.num_rows; j++){
-            U.elements[i * U.num_rows + j] -= U.elements[k * U.num_rows + i] * U.elements[k * U.num_rows + j];
+            U.elements[i * U.num_rows + j] -= 
+                    U.elements[k * U.num_rows + i] * U.elements[k * U.num_rows + j];
          }
       }
    }
@@ -139,12 +166,44 @@ void chol_using_openmp(const Matrix A, Matrix U){
 \end{lstlisting}
 \end{frame}
 
+
+\begin{frame}
+  \frametitle{Resultados}
+  
+  \begin{figure}
+    \begin{tikzpicture}
+      \begin{axis}[
+        mbarplot,
+        xlabel={Tipo de ejecución},
+        ylabel={Tiempo (s)},
+        %enlargelimits=0.15,
+        %legend style={at={(0.5,-0.15)},
+        %  anchor=north,legend columns=-1},
+        %ylabel={Tiempo (s)},
+        symbolic x coords={secuencial,pthread,OpenMP},
+        xtick=data,
+        nodes near coords,
+        nodes near coords align={vertical},
+        ]
+        \addplot coordinates {(secuencial,7) (pthread,9) (OpenMP,4)};
+        \addplot coordinates {(secuencial,20.97) (pthread,10.81) (OpenMP,5.58)};
+        \legend{gcc, icc}
+      \end{axis}
+    \end{tikzpicture}
+  \end{figure}
+
+
+\end{frame}
+
 %======= BIBLIOGRAFÍA =======
 \begin{frame}
   \frametitle{Bibliografía}
   
   \begin{enumerate}
-  \item \textbf{Wikipedia:}\\\url{https://en.wikipedia.org/}
+  \item \url{https://pm.bsc.es/}
+  \item \url{https://software.intel.com/en-us/c-compilers}
+  \item \url{https://gcc.gnu.org/}
+  \item \url{https://es.wikipedia.org/wiki/Factorizaci\%C3\%B3n_de_Cholesky}
   \end{enumerate}
 \end{frame}
 
