una pequeña errata en la descripción de las pruebas

--- a/p8-openMP/PRESENTACION.tex
+++ b/p8-openMP/PRESENTACION.tex
@@ -106,8 +106,8 @@ $$ A = C * C^t $$
 
   \alert{Pruebas realizadas:}
   \begin{itemize}
-  \item Ejecución de Cholesky \textbf{secuencial}.
-  \item Ejecución de Cholesky usando \textbf{pthreads} (16 threads).
+  \item Ejecución de Cholesky \textbf{secuencial} (gcc \& icc).
+  \item Ejecución de Cholesky usando \textbf{16 pthreads} (gcc \& icc).
   \item Ejecución de Cholesky utilizando \textbf{OpenMP - gcc}.
   \item Ejecución de Cholesky utilizando \textbf{OpenMP - Intel}.
   \end{itemize}
