tilde en mi apellido

--- a/p8-openMP/PRESENTACION.tex
+++ b/p8-openMP/PRESENTACION.tex
@@ -18,7 +18,7 @@
 \title{Ejemplo de aplicación OpenMP}
 \subtitle{Factorización de Cholesky}
 \date{}
-\author{Luis María Costero Valero\\Jesús Javier Domenech Arellano\\Hristo
+\author{Luis María Costero Valero\\Jesús Javier Doménech Arellano\\Hristo
   Ivanov Ivanov}
 \institute{--- CAP. Grupo E ---}
 
