--- a/p11-Maui/PRESENTACION.tex
+++ b/p11-Maui/PRESENTACION.tex
@@ -66,7 +66,15 @@
 
 \begin{frame}
   \frametitle{¿Qué es?}
+Maui es un planificador de tareas para clusters.\\
+Se desarrolló a mediados de los 90.\\
 
+Las políticas de planificación de Maui abarcan:
+\begin{itemize}
+\item Prioridad dinámica.
+\item Reservas.
+\item fairShare \emph{(Compartición justa)}
+\end{itemize}
 \end{frame}
 
 \begin{frame}
