--- a/p10-HPFortran/PRESENTACION.tex
+++ b/p10-HPFortran/PRESENTACION.tex
@@ -143,10 +143,30 @@
 
 \begin{frame}[fragile]
   \frametitle{Bibliografía}
-  \url{http://www.mcs.anl.gov/~itf/dbpp/text/node82.html}
-  \url{http://h21007.www2.hp.com/portal/download/files/unprot/fortran/docs/lrm/lrm0009.htm}
-  \url{https://en.wikipedia.org/wiki/High_Performance_Fortran}
-  \url{http://hpff.rice.edu/}
+    \begin{thebibliography}{}
+        \bibitem{kcc}
+            \emph{High Performance Fortran},
+            Ian Foster,
+            1995,
+            \url{http://www.mcs.anl.gov/~itf/dbpp/text/node82.html}.
+        \bibitem{kcc}
+            \emph{High Performance Fortran Features},
+            Compaq Computer Corporation Houston Texas,
+            September 1999
+            \url{http://h21007.www2.hp.com/portal/download/files/unprot/fortran/docs/lrm/lrm0009.htm}
+        \bibitem{kcc}
+            \emph{High Performance Fortran},
+            Wikipedia,
+            2013,
+            \url{https://en.wikipedia.org/wiki/High_Performance_Fortran}
+        \bibitem{kcc}
+            \emph{High Performance Fortran, Official Page},
+            Rice University
+            2000-2006,
+            \url{http://hpff.rice.edu/}
+    \end{thebibliography}{}
+
+
 \end{frame}
 
 \end{document}
